# agent-handshake-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
agent_handshake_protocol/: __init__.py  capabilities.py  contracts.py  secret_floor.py
docs/: COMPATIBILITY.md  RELEASING.md  diplomat-v1-compat-prd.md
examples/: custom_block.py
tests/: test_capabilities.py  test_contracts.py  test_examples.py  test_secret_floor.py
